@@ -7,8 +7,10 @@ kfreebsd-10 (10.0~svn233872-2) UNRELEASED; urgency=low
   * pty(4) was removed from GENERIC in 10-CURRENT (see rev 233271), but
     unfortunately glibc doesn't support pts(4) yet (see #667448).
     Reenable in sys/conf/DEBIAN.
+  * 921_signal_watchdog.diff: Add a safety check to detect when the
+    spares in struct sigevent are claimed by upstream (see #666454).
 
- -- Robert Millan <rmh@debian.org>  Wed, 18 Apr 2012 23:53:31 +0200
+ -- Robert Millan <rmh@debian.org>  Sat, 21 Apr 2012 19:12:52 +0200
 
 kfreebsd-10 (10.0~svn233872-1) experimental; urgency=low
 
